iphone fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body{
 	margin: 500px 0px 0px 0px;
 	transform: rotate(-90deg);
 	text-transform: capitalize;
+	overflow: hidden;
 }
 .sunset {
 	margin: 0px 0px 0px 0px;
